--- a/client/nav.jade
+++ b/client/nav.jade
@@ -56,11 +56,10 @@ template(name='nav')
                         //-     .menu
                         //-         each notifications
                         //-             .ui.button #{text}
-                        //- if is_admin
-                        //-     a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
-                        //-         +i name='new-post'
-                                //- i.large.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
                         if currentUser
+                            a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
+                                //- +i name='new-post'
+                                i.big.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
                             a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
                                 +i name='chat'
                                 //- i.chat.large.icon
