--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -48,35 +48,35 @@ template(name='user_edit')
                                 +number_view key='building_number' label='Building #' direct=true
                                 +text_view key='building_code' label='Building Code' direct=true
                                 +date_view key='start_date' label='Start Date' direct=true
-                                //- if user_is_owner
-                                //-     +image_view key='ownership_paperwork' label='Ownership Paperwork' direct=true
-                                //- if user_is_resident
-                                //-     +date_view key='expiration_date' label='Expiration Date' direct=true
-                                //-     +pdf_view key='lease_agreement' label='Lease Agreement' direct=true
+                                if user_is_owner
+                                    +image_view key='ownership_paperwork' label='Ownership Paperwork' direct=true
+                                else if user_is_resident
+                                    +date_view key='expiration_date' label='Expiration Date' direct=true
+                                    +pdf_view key='lease_agreement' label='Lease Agreement' direct=true
                                 +pdf_view key='member_guidelines_and_waiver' label='Lease Agreement' direct=true
                         //- +text_edit key='email' label='Email' direct=true
                         +phone_edit key='phone' label='Phone' direct=true
                         //- +image_edit key='banner_image_id' label='Banner Image' direct=true
                         //- +text_edit key='tagline' label='tag line' direct=true
                         
-                        //- if is_resident
-                        //-     if is_staff
-                        //-         +array_edit key='tags' label='Tags' direct=true
-                //- .column
-                    //- if is_staff
-                    //-     //- with user_from_username_param
-                    //-     +boolean_edit key='government_id_checked' label='Government Id Checked' direct=true
-                    //-     +single_user_edit key='id_checked_by_staff' label='Government Id Checked by' role_filter='staff' direct=true
-                    //-     +date_edit key='id_checked_date' label='Government Id Checked Date' direct=true
-                    //- else
-                    //-     +boolean_view key='government_id_checked' label='Government Id Checked' direct=true
-                    //-     +text_view key='id_checked_by_staff' label='Government Id Checked by' role_filter='staff' direct=true
-                    //-     +date_view key='id_checked_date' label='Government Id Checked Date' direct=true
+                        if is_resident
+                            if is_staff
+                                +array_edit key='tags' label='Tags' direct=true
+                .column
+                    if is_staff
                         //- with user_from_username_param
-                    //- +text_edit key='spirit_animal' label='spirit animal' direct=true
-                    //- +boolean_edit key='published' label='Profile Published'
-                    //- //- +payment_methods
-                    //- +user_settings
+                        +boolean_edit key='government_id_checked' label='Government Id Checked' direct=true
+                        +single_user_edit key='id_checked_by_staff' label='Government Id Checked by' role_filter='staff' direct=true
+                        +date_edit key='id_checked_date' label='Government Id Checked Date' direct=true
+                    else
+                        +boolean_view key='government_id_checked' label='Government Id Checked' direct=true
+                        +text_view key='id_checked_by_staff' label='Government Id Checked by' role_filter='staff' direct=true
+                        +date_view key='id_checked_date' label='Government Id Checked Date' direct=true
+                        //- with user_from_username_param
+                    +text_edit key='spirit_animal' label='spirit animal' direct=true
+                    +boolean_edit key='published' label='Profile Published'
+                    //- +payment_methods
+                    +user_settings
                     
                     
 template(name='user_settings')
