--- a/client/docs.jade
+++ b/client/docs.jade
@@ -37,7 +37,7 @@ template(name='cloud')
             .unselect_tag.ui.grey.button
                 strong #{this}
     each all_tags
-        .ui.button.select_tag(class=cloud_tag_class) 
+        .ui.basic.button.select_tag(class=cloud_tag_class) 
             strong #{this.name}
 
 
