--- a/client/fields.jade
+++ b/client/fields.jade
@@ -561,7 +561,7 @@ template(name='array_view')
             else
                 |#{this}
             each field_value
-                .ui.large.label #{this}
+                .ui.large.basic.label #{this}
 
 
 template(name='children_edit')
