--- a/client/chat.jade
+++ b/client/chat.jade
@@ -9,30 +9,67 @@ template(name='chat_messages_pane')
             input.add_message(type='text' placeholder='add message...')
                 
 template(name='chat_list')
+    .ui.small.inline.header channels
+    .ui.icon.basic.button#create_chat(title='new channel')
+        i.plus.icon
+
     .ui.segments
         each chat_list_items
             +chat_list_item
+    .ui.small.inline.header direct messages
+    .ui.icon.basic.button#create_chat(title='new channel')
+        i.plus.icon
+
+    .ui.segments
+        each private_chats
+            +private_chat_item
             
             
 template(name='chat_list_item')
     .ui.smoothed.pointer.segment.chat_list_item(href='#' class=chat_list_item_class)
         .content
             .description
-                .ui.horizontal.list
-                    each participants
-                        .item(title=username)
-                            // a(href="/user/profile/#{_id}")
-                            img.ui.avatar.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
-                            |#{username}
-                            +user_status
+                //- .ui.horizontal.list
+                //-     each participants
+                //-         .item(title=username)
+                //-             // a(href="/user/profile/#{_id}")
+                //-             img.ui.avatar.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
+                //-             |#{username}
+                //-             +user_status
             .description
-                each tags
-                    .ui.small.label #{this}
-            .description
+                .ui.header #{title}
+                //- each tags
+                //-     .ui.small.label #{this}
+            //- .description
                 // strong {{cutString last_message.body 100}}
-                strong {{last_message.body}}
+                //- strong {{last_message.body}}
+            //- .description
+            //-     |by #{last_message.author.username} #{last_message.when}
+            //- .extra
+            //-     .span #{unread_message_count} unread messages
+            //-     .span #{message_count} total messages                
+            
+            
+template(name='private_chat_item')
+    .ui.smoothed.pointer.segment.chat_list_item(href='#' class=chat_list_item_class)
+        .content
             .description
-                |by #{last_message.author.username} #{last_message.when}
+                //- .ui.horizontal.list
+                //-     each participants
+                //-         .item(title=username)
+                //-             // a(href="/user/profile/#{_id}")
+                //-             img.ui.avatar.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
+                //-             |#{username}
+                //-             +user_status
+            .description
+                .ui.header #{title}
+                //- each tags
+                //-     .ui.small.label #{this}
+            //- .description
+                // strong {{cutString last_message.body 100}}
+                //- strong {{last_message.body}}
+            //- .description
+            //-     |by #{last_message.author.username} #{last_message.when}
             //- .extra
             //-     .span #{unread_message_count} unread messages
             //-     .span #{message_count} total messages                
@@ -76,13 +113,11 @@ template(name='view_chats')
         .row
             .four.wide.column
                 //- .ui.label(title='Unread') #{unread_message_count} Unread
-                .ui.icon.button#create_chat(title='new channel')
-                    i.plus.icon
                 .unread_icon(data-tooltip='Unread Messages' data-position='bottom center')
                     i.secured-letter.icon
                 //- .ui.inline.grey.header 
                     i.tags.icon
-                i.tags.icon
+                +i name='tags' classes='ui inline mini image'
                 +cloud filter='chat'
                 //- +participant_filter type='chat'
                 +chat_list
@@ -116,6 +151,7 @@ template(name='view_chat')
                         |stats
                     //- .ui.small.inline.header #{message_count} messages
                     //- .ui.small.inline.header #{unread_message_count} unread
+                    +text_edit key='title' direct=true
                     .ui.small.header 
                         i.align.left.icon
                         |description
