--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -4,8 +4,8 @@ template(name='delta')
             .row
                 .six.wide.column.scrolling
                     .ui.right.aligned.inline.header
-                        i.icon(class=icon)
-                        //- +i name=icon
+                        //- i.icon(class=icon)
+                        +i name=icon
                         | #{title}
                     unless is_loading
                         //- if is_admin
