--- a/client/chat.jade
+++ b/client/chat.jade
@@ -9,6 +9,7 @@ template(name='chat_messages_pane')
             input.add_message(type='text' placeholder='add message...')
                 
 template(name='chat_list')
+    div
     .ui.small.inline.header channels
     .ui.icon.basic.button#create_chat(title='new channel')
         i.plus.icon
@@ -121,15 +122,15 @@ template(name='view_chats')
                 +cloud filter='chat'
                 //- +participant_filter type='chat'
                 +chat_list
-                .ui.small.header viewing: 
-                    if viewing_published
-                        #view_private_chats.ui.button 
-                            i.unhide.icon
-                            |Published
-                    if viewing_private
-                        #view_published_chats.ui.button 
-                            i.lock.icon
-                            |Private
+                //- .ui.small.header viewing: 
+                //-     if viewing_published
+                //-         #view_private_chats.ui.button 
+                //-             i.unhide.icon
+                //-             |Published
+                //-     if viewing_private
+                //-         #view_published_chats.ui.button 
+                //-             i.lock.icon
+                //-             |Private
             .twelve.wide.column
                 with selected_chat
                     +view_chat
