--- a/client/docs.jade
+++ b/client/docs.jade
@@ -31,10 +31,10 @@ template(name='cloud')
         //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
         // .ui.hidden.fitted.divider
     if selected_tags
-        #clear_tags.ui.grey.icon.button
+        #clear_tags.ui.blue.icon.button
             i.remove.icon
         each selected_tags
-            .unselect_tag.ui.grey.button
+            .unselect_tag.ui.blue.button
                 strong #{this}
     each all_tags
         .ui.basic.button.select_tag(class=cloud_tag_class) 
@@ -81,7 +81,7 @@ template(name='view')
                     .ui.basic.segment.large150
                         .ui.header
                             if icon
-                                i.grey.icon(class=icon)
+                                i.blue.icon(class=icon)
                             |#{title}
                         if is_dev
                             //- +clone_button
